[package]
name = "binary-heap-plus"
version = "0.2.0"
authors = ["SEKINE, Hideki <sekineh@me.com>"]
description = "Enhanced version of std::collections::BinaryHeap that supports max, min, and custom-order heaps."
license = "MIT"
repository = "https://github.com/sekineh/binary-heap-plus-rs"
readme = "README.md"
keywords = ["binary", "heap", "priority", "queue"]
category = ["data-structures", "algorithms", ]

[dependencies]
compare = "0.1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.39"

[badges]
travis-ci = { repository = "sekineh/binary-heap-plus-rs" }
appveyor = { repository = "sekineh/binary-heap-plus-rs" }