[package]
name = "mut-binary-heap"
version = "0.1.0"
authors = ["Burkhard Mittelbach <burkhard@mittelbach-online.de>"]
description = "Enhanced version of std::collections::BinaryHeap that supports increase and decrease key, max, min, and custom-order heaps and increas."
license = "MIT"
repository = "https://github.com/Wasabi375/binary-heap-plus-rs" # TODO change path
readme = "README.md"
keywords = ["binary", "heap", "priority", "queue"]
categories = ["data-structures", "algorithms", ]
edition = "2021"
rust-version = "1.56.0"

[dependencies]
compare = "0.1.0"
serde = { version = "1.0.116", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.57"
rand = "0.8"
